--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ogeHttp",
+    "name": "Http",
     "version": "0.0.5",
     "description": "http module for OGE",
     "readme": "ERROR: No README data found!",
